Fix overflow bug for Safari

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -96,11 +96,19 @@ footer {
   width: 56px;
   height: 56px;
   border: 0;
+  padding: 0;
   border-radius: 50%;
   color: $color-white;
   background: $color-red;
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+  .inner {  /* Safari bug... overflow bleed */
+    height: 100%;
+    padding-top: 12px;
+    border-radius: 50%;
+    -webkit-mask-image: -webkit-radial-gradient(white, black);
+  }
   svg {
+    display: inline-block;
     transition: transform 0.2s ease-out;
   }
   &.is-disabled {
@@ -224,8 +232,7 @@ footer {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  /* Safari bug... overflow bleed */
-  background: rgba(255, 255, 255, .2);
+  background: $color-white;
 }
 
 //-------------------------------------------
